--- a/src/index.css
+++ b/src/index.css
@@ -20,5 +20,11 @@ input[type='text'], input[type='email']{
   background-image: none;
   border: 1px solid #ccc;
   border-radius: 4px;
+  /* margin-bottom: 20px; */
+}
+.form-control{
   margin-bottom: 20px;
+}
+.errors{
+  color: 'red';
 }
