--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ label{
   margin-bottom: 5px;
 }
 
-input[type='text'], input[type='email']{
+input[type='text'], input[type='email'], textarea{
   display: block;
   width: 400px;
   padding: 6px 12px;
